Contact: fix centering by excluding .center class from left-align override

--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@ h1, h2, h3, h4, h5, h6 {
   margin: 0;
 }
 
-.contact-page .content p {
+.contact-page .content p:not(.center) {
   text-align: left !important;
 }
 
